--- a/About.html
+++ b/About.html
@@ -26,7 +26,7 @@
     <div class="social-media">
         <h3>Follow Me</h3>
         <ul>
-            <li><a href="https://www.instagram.com/" target="_blank">Instagram</a></li>
+            <li><a href="https://nam10.safelinks.protection.outlook.com/?url=https%3A%2F%2Fwww.instagram.com%2Flilhijabi_%2Fprofilecard%2F%3Figsh%3DNjBnb3NreGIzN3M%3D&data=05%7C02%7Cnazmin.begum001%40umb.edu%7C9969021c626d4e039f2608dd130d0086%7Cb97188711ee94425953c1ace1373eb38%7C0%7C0%7C638687668770677422%7CUnknown%7CTWFpbGZsb3d8eyJFbXB0eU1hcGkiOnRydWUsIlYiOiIwLjAuMDAwMCIsIlAiOiJXaW4zMiIsIkFOIjoiTWFpbCIsIldUIjoyfQ%3D%3D%7C0%7C%7C%7C&sdata=X8nRp%2F102rRE3LiCKyGsIG9yayc2eEaaW3CIIiJrKto%3D&reserved=0" target="_blank">Instagram</a></li>
            <li><a href="https://www.tiktok.com/" target="_blank">TikTok</a></li>
            <li><a href="https://www.joinhandshake.com/" target="_blank">Handshake</a></li>
            <li><a href="https://www.joinhandshake.com/" target="_blank">LinkedIn</a></li>
