--- a/Myskills.html
+++ b/Myskills.html
@@ -3,18 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>My Skills</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div> <nav>
-        <a href="index.html">Home</a>
-        <a href="Myskills.html">Skills</a>
-        <a href="About.html">About</a>
-        <a href="projects.html">Projects</a>
-    </nav>
+    
+    <div class="header">
+        <div class="logo">
+            <h2>Coder</h2>
+        </div>
+        <nav>
+            <a href="index.html">Home</a>
+            <a href="myskills.html">Skills</a>
+            <a href="about.html">About</a>
+            <a href="projects.html">Projects</a>
+        </nav>
+        <div class="search">
+            <input type="text" placeholder="Search...">
+        </div>
     </div>
     <div class="skills">
-        <h2>MY SKILLS</h2>
+        <h2>My Skills</h2>
         <ul>
             <li>HTML: Creating semantic, structured web pages.</li>
             <li>CSS: Styling with colors, fonts, and layouts.</li>
@@ -23,6 +32,8 @@
             <li>Creating navigation bars and buttons.</li>
         </ul>
     </div>
-    
+    <div class="footer">
+        <p>Thank you for exploring my skills. Feel free to connect with me for collaboration!</p>
+    </div>
 </body>
 </html>
