--- a/index.html
+++ b/index.html
@@ -5,41 +5,33 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Designer Portfolio</title>
     <link rel="stylesheet" href="styles.css">
-    <style>
-    body {
-    background-image: url('https://th.bing.com/th/id/R.c5338695fdd771a045aa1db128c29e27?rik=iFeXt4I9jVPOow&riu=http%3a%2f%2fartisantalent.com%2fwp-content%2fuploads%2f2015%2f03%2fweb-design-toolkit-ideas.jpg&ehk=K%2b4l%2faRrdE22QrQl5b5poBqryafJFGxzPfPbSxTRzoA%3d&risl=&pid=ImgRaw&r=0');
-    background-repeat: no-repeat;
-    background-size: cover;
-    }
-    </style>
 </head>
 <body>
     <div class="header">
         <div class="logo">
             <h2>Coder</h2>
-        
-        
         </div>
         <nav>
             <a href="index.html">Home</a>
-            <a href="Myskills.html">Skills</a>
-            <a href="About.html">About</a>
+            <a href="myskills.html">Skills</a>
+            <a href="about.html">About</a>
             <a href="projects.html">Projects</a>
         </nav>
         <div class="search">
-            <input type="text" placeholder="Search.. #Nazmin">
+            <input type="text" placeholder="Search...">
         </div>
     </div>
-
-    <div class="My Title">
+    <div class="my-title">
         <h1>I Am a Web Designer</h1>
         <button>My Work</button>
     </div>
-
     <div class="skills">
         <h2>MY SKILLS</h2>
-    <div class="footer">
-        <p>My Journey in Web Design has begun</p>
+    </div>
+   <div class="footer">
+        <p>My journey in web design has begun</p>
     </div>
 </body>
 </html>
+
+
