--- a/projects.html
+++ b/projects.html
@@ -3,31 +3,45 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Projects</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div> <nav>
-        <a href="index.html">Home</a>
-        <a href="Myskills.html">Skills</a>
-        <a href="About.html">About</a>
-        <a href="projects.html">Projects</a>
-    </nav>
+    <div class="header">
+        <div class="logo">
+            <h2>Coder</h2>
+        </div>
+        <nav>
+            <a href="index.html">Home</a>
+            <a href="myskills.html">Skills</a>
+            <a href="about.html">About</a>
+            <a href="projects.html">Projects</a>
+        </nav>
+        <div class="search">
+            <input type="text" placeholder="Search...">
+        </div>
     </div>
+    
     <div class="projects">
-        <h2>Projects I Have Done with HTML and CSS:</h2>
+        <h2>Projects I Have Done with HTML and CSS</h2>
         <ol>
             <li>My Favorite Food with Recipes (Project 1)</li>
             <li>Sign-Up Form (Project 2)</li>
             <li>A Defined Movie "The Jungle Book" (Project 3)</li>
         </ol>
         <div class="project-links">
-            <h2>Here Are the Links for Each Project:</h2>
+            <h2>Links to Each Project</h2>
             <ul>
-                <li><a href="favorite-foods.html" target="_blank">Project 1</a></li>
-                <li><a href="sign-up-form.html" target="_blank">Project 2</a></li>
-                <li><a href="jungle-book.html" target="_blank">Project 3</a></li>
+                <li><a href="projects/favorite-foods.html" target="_blank">My Favorite Food with Recipes</a></li>
+                <li><a href="projects/sign-up-form.html" target="_blank">Sign-Up Form</a></li>
+                <li><a href="projects/project2/index.html" target="_blank">The Jungle Book</a></li>
             </ul>
         </div>
-    </div>   
+    </div>
+    <div class="footer">
+        <p>Thank you for visiting my portfolio website.</p>
+    </div>
 </body>
 </html>
+
+
