--- a/About.html
+++ b/About.html
@@ -39,8 +39,8 @@
         </div>
         <nav>
             <a href="index.html">Home</a>
-            <a href="myskills.html">Skills</a>
-            <a href="about.html">About</a>
+            <a href="Myskills.html">Skills</a>
+            <a href="About.html">About</a>
             <a href="projects.html">Projects</a>
         </nav>
         <div class="search">
